Testando tela de entrada com as credenciais, criando as restrições

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -67,3 +67,20 @@ a:hover{
 :-ms-input-placeholder{
     color:#fff;
 }
+
+div#msg-sucesso{
+    width: 420px;
+    margin:10px auto;
+    padding: 10px;
+    background-color: rgba(50,205,50,.3);
+    border:1px solid rgb(34,139,34);
+
+}
+div.msg-erro{
+    width: 420px;
+    margin:10px auto;
+    padding: 10px;
+    background-color: rgba(250,128,114,0.3);
+    border:1px solid rgb(165,42,42);
+
+}
